--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
                     <button class="switch__btn">GER</button>
                   </div>
-                  <a href="" class="btn">book events</a>
+                  <a href="" class="btn">book events
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
               </li>
             </ul>
@@ -40,7 +44,11 @@
 
               <button class="switch__btn">GER</button>
             </div>
-            <a href="" class="btn">book events</a>
+            <a href="" class="btn">book events
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+				</svg>
+			</a>
           </div>
           <div class="burgerBtn">
             <span class="btn-menu-line btn-menu-line1"></span>
@@ -145,7 +153,11 @@
               athletes, corporate clients, and children's parties. We excel in
               creating unforgettable, well-managed events.
             </p>
-            <a href="" class="btn">More about us</a>
+            <a href="./about.html" class="btn">More about us
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+					</svg>
+			</a>
           </div>
         </div>
         <div class="about__slider">
@@ -208,7 +220,11 @@
                     child's party? CompeteX Sport Events specializes in
                     thrilling Jiu Jitsu competitions tailored for kids' parties!
                   </p>
-                  <a href="./services.html" class="btn">read more</a>
+                  <a href="./services.html" class="btn">read more
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
                 <div class="services__item_img">
                   <img
@@ -227,7 +243,11 @@
                     This boosts morale, strengthens team bonds, and creates
                     unforgettable experiences.
                   </p>
-                  <a href="./services.html" class="btn">read more</a>
+                  <a href="./services.html" class="btn">read more
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
                 <div class="services__item_img">
                   <img
@@ -246,7 +266,11 @@
                     management with team-building excitement, ensuring a
                     successful and memorable experience for all.
                   </p>
-                  <a href="./services.html" class="btn">read more</a>
+                  <a href="./services.html" class="btn">read more
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
                 <div class="services__item_img">
                   <img
@@ -368,7 +392,11 @@
                 alt="gallery image"
               />
             </div>
-            <a href="./gallery.html" class="btn">more photo</a>
+            <a href="./gallery.html" class="btn">more photo
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+					</svg>
+			</a>
           </div>
         </div>
       </section>
@@ -417,7 +445,11 @@
                 </div>
               </div>
             </div>
-            <a href="#" class="btn"> More news</a>
+            <a href="#" class="btn"> More news
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+					</svg>
+			</a>
           </div>
         </div>
       </section>
