--- a/post.html
+++ b/post.html
@@ -16,11 +16,9 @@
           </a>
           <nav>
             <ul class="menu">
-              <li><a href="./index.html">Home</a></li>
+              <li class="current_page_item"><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About Us</a></li>
-              <li class="current_page_item">
-                <a href="./services.html">Services</a>
-              </li>
+              <li><a href="./services.html">Services</a></li>
               <li><a href="./news.html">News</a></li>
               <li><a href="./gallery.html">Gallery</a></li>
               <li><a href="./contact.html">Contact</a></li>
@@ -31,7 +29,11 @@
 
                     <button class="switch__btn">GER</button>
                   </div>
-                  <a href="" class="btn">book events</a>
+                  <a href="" class="btn">book events
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
               </li>
             </ul>
@@ -42,7 +44,11 @@
 
               <button class="switch__btn">GER</button>
             </div>
-            <a href="" class="btn">book events</a>
+            <a href="" class="btn">book events
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+				</svg>
+			</a>
           </div>
           <div class="burgerBtn">
             <span class="btn-menu-line btn-menu-line1"></span>
@@ -138,7 +144,11 @@
 						</div>
 					  </div>
 				</div>
-				<a href="./news.html" class="green-btn">more news</a>
+				<a href="./news.html" class="green-btn">more news
+					<svg xmlns="http://www.w3.org/2000/svg" width="10" height="11" viewBox="0 0 10 11" fill="none">
+						<path d="M9.99309 1.25739C9.99309 0.843181 9.65731 0.507395 9.24309 0.507395L2.49309 0.507394C2.07888 0.507394 1.74309 0.843181 1.74309 1.25739C1.74309 1.67161 2.07888 2.00739 2.49309 2.00739H8.49309V8.00739C8.49309 8.42161 8.82888 8.75739 9.24309 8.75739C9.65731 8.75739 9.99309 8.42161 9.99309 8.00739L9.99309 1.25739ZM1.28814 10.273L9.77342 1.78772L8.71276 0.727064L0.227482 9.21235L1.28814 10.273Z" fill="white"/>
+						</svg>
+				</a>
 			</div>
 		</div>
 	</div>
