--- a/service-page.html
+++ b/service-page.html
@@ -26,10 +26,13 @@
                 <div class="header__book">
                   <div class="switch__btns">
                     <button class="switch__btn active">ENG</button>
-
                     <button class="switch__btn">GER</button>
                   </div>
-                  <a href="" class="btn">book events</a>
+                  <a href="./contact.html" class="btn">book events
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
               </li>
             </ul>
@@ -37,10 +40,13 @@
           <div class="header__book">
             <div class="switch__btns">
               <button class="switch__btn active">ENG</button>
-
               <button class="switch__btn">GER</button>
             </div>
-            <a href="" class="btn">book events</a>
+            <a href="./contact.html" class="btn">book events
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+				</svg>
+			</a>
           </div>
           <div class="burgerBtn">
             <span class="btn-menu-line btn-menu-line1"></span>
@@ -184,6 +190,7 @@
 			  </div>
 			</div>
 		  </section>
+		  
 		<section class="feature mb-m">
 			<div class="container">
 				<div class="feature__container">
@@ -276,7 +283,26 @@
 				</div>
 			</div>
 		</section>
-		  <section class="faq mb-m">
+		<section class="promo mb-m">
+			<div class="container">
+				<div class="promo__container">
+					<div class="promo__title">
+						<h2>Book Your Corporate Events Today!</h2>
+						<div class="promo__images">
+							<img src="./assets/image/slide-img4.jpg" alt="Book Your Corporate Events Today!">
+							<img src="./assets/image/mission-img2.jpg" alt="Book Your Corporate Events Today!">
+							<img src="./assets/image/mission-img1.jpg" alt="Book Your Corporate Events Today!">
+							<img src="./assets/image/slide-img2.jpg" alt="Book Your Corporate Events Today!">
+						</div>
+					</div>
+					<div class="promo__info">
+						<p>Ready to empower your team with the transformative power of Jiu Jitsu? Contact us today to learn more about our customizable corporate event packages and start planning an unforgettable experience for your team!</p>
+						<a href="./contact.html" class="btn">book events</a>
+					</div>
+				</div>
+			</div>
+		  </section>
+		<section class="faq mb-m">
 			<div class="container">
 			  <div class="faq__container">
 				<div class="faq__title title">
@@ -288,27 +314,10 @@
 					<div class="faq__accord-item-top accord-item-top">
 					  <p>1. How can I purchase tickets to a sporting event?</p>
 					  <div class="close">
-						<svg
-						  viewBox="0 0 32 32"
-						  version="1.1"
-						  xmlns="http://www.w3.org/2000/svg"
-						  xmlns:xlink="http://www.w3.org/1999/xlink"
-						  fill="#000000"
-						>
-						  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-						  <g
-							id="SVGRepo_tracerCarrier"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-						  ></g>
-						  <g id="SVGRepo_iconCarrier">
-							<g id="icomoon-ignore"></g>
-							<path
-							  d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-							  fill="#ffffff"
-							></path>
-						  </g>
-						</svg>
+						<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+							<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+							</svg>
 					  </div>
 					</div>
 					<div class="faq__accord-item-bottom accord-item-bottom">
@@ -324,27 +333,10 @@
 					<div class="faq__accord-item-top accord-item-top">
 					  <p>2. What types of sporting events do you cover?</p>
 					  <div class="close">
-						<svg
-						  viewBox="0 0 32 32"
-						  version="1.1"
-						  xmlns="http://www.w3.org/2000/svg"
-						  xmlns:xlink="http://www.w3.org/1999/xlink"
-						  fill="#000000"
-						>
-						  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-						  <g
-							id="SVGRepo_tracerCarrier"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-						  ></g>
-						  <g id="SVGRepo_iconCarrier">
-							<g id="icomoon-ignore"></g>
-							<path
-							  d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-							  fill="#ffffff"
-							></path>
-						  </g>
-						</svg>
+						<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+							<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+							</svg>
 					  </div>
 					</div>
 					<div class="faq__accord-item-bottom accord-item-bottom">
@@ -360,27 +352,10 @@
 					<div class="faq__accord-item-top accord-item-top">
 					  <p>3. Can I return my ticket if I am unable to attend the event?</p>
 					  <div class="close">
-						<svg
-						  viewBox="0 0 32 32"
-						  version="1.1"
-						  xmlns="http://www.w3.org/2000/svg"
-						  xmlns:xlink="http://www.w3.org/1999/xlink"
-						  fill="#000000"
-						>
-						  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-						  <g
-							id="SVGRepo_tracerCarrier"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-						  ></g>
-						  <g id="SVGRepo_iconCarrier">
-							<g id="icomoon-ignore"></g>
-							<path
-							  d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-							  fill="#ffffff"
-							></path>
-						  </g>
-						</svg>
+						<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+							<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+							</svg>
 					  </div>
 					</div>
 					<div class="faq__accord-item-bottom accord-item-bottom">
@@ -396,27 +371,10 @@
 					<div class="faq__accord-item-top accord-item-top">
 					  <p>4. How can I find out about upcoming sporting events and promotions?</p>
 					  <div class="close">
-						<svg
-						  viewBox="0 0 32 32"
-						  version="1.1"
-						  xmlns="http://www.w3.org/2000/svg"
-						  xmlns:xlink="http://www.w3.org/1999/xlink"
-						  fill="#000000"
-						>
-						  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-						  <g
-							id="SVGRepo_tracerCarrier"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-						  ></g>
-						  <g id="SVGRepo_iconCarrier">
-							<g id="icomoon-ignore"></g>
-							<path
-							  d="M10.722 9.969l-0.754 0.754 5.278 5.278-5.253 5.253 0.754 0.754 5.253-5.253 5.253 5.253 0.754-0.754-5.253-5.253 5.278-5.278-0.754-0.754-5.278 5.278z"
-							  fill="#ffffff"
-							></path>
-						  </g>
-						</svg>
+						<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<line x1="6.56689" y1="1.09278e-08" x2="6.56689" y2="13" stroke="white"/>
+							<line x1="1.09278e-08" y1="6.43335" x2="13" y2="6.43335" stroke="white"/>
+							</svg>
 					  </div>
 					</div>
 					<div class="faq__accord-item-bottom accord-item-bottom">
@@ -432,6 +390,7 @@
 			  </div>
 			</div>
 		  </section>
+		  
 </main>
 <footer class="footer">
   <div class="container">
