--- a/news.html
+++ b/news.html
@@ -16,11 +16,9 @@
           </a>
           <nav>
             <ul class="menu">
-              <li><a href="./index.html">Home</a></li>
+              <li class="current_page_item"><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About Us</a></li>
-              <li class="current_page_item">
-                <a href="./services.html">Services</a>
-              </li>
+              <li><a href="./services.html">Services</a></li>
               <li><a href="./news.html">News</a></li>
               <li><a href="./gallery.html">Gallery</a></li>
               <li><a href="./contact.html">Contact</a></li>
@@ -31,7 +29,11 @@
 
                     <button class="switch__btn">GER</button>
                   </div>
-                  <a href="" class="btn">book events</a>
+                  <a href="" class="btn">book events
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
               </li>
             </ul>
@@ -42,7 +44,11 @@
 
               <button class="switch__btn">GER</button>
             </div>
-            <a href="" class="btn">book events</a>
+            <a href="" class="btn">book events
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+				</svg>
+			</a>
           </div>
           <div class="burgerBtn">
             <span class="btn-menu-line btn-menu-line1"></span>
