--- a/services.html
+++ b/services.html
@@ -16,9 +16,9 @@
           </a>
           <nav>
             <ul class="menu">
-              <li ><a href="./index.html">Home</a></li>
+              <li class="current_page_item"><a href="./index.html">Home</a></li>
               <li><a href="./about.html">About Us</a></li>
-              <li class="current_page_item"><a href="./services.html">Services</a></li>
+              <li><a href="./services.html">Services</a></li>
               <li><a href="./news.html">News</a></li>
               <li><a href="./gallery.html">Gallery</a></li>
               <li><a href="./contact.html">Contact</a></li>
@@ -29,7 +29,11 @@
 
                     <button class="switch__btn">GER</button>
                   </div>
-                  <a href="" class="btn">book events</a>
+                  <a href="" class="btn">book events
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+						<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+						</svg>
+				  </a>
                 </div>
               </li>
             </ul>
@@ -40,7 +44,11 @@
 
               <button class="switch__btn">GER</button>
             </div>
-            <a href="" class="btn">book events</a>
+            <a href="" class="btn">book events
+				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+					<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
+				</svg>
+			</a>
           </div>
           <div class="burgerBtn">
             <span class="btn-menu-line btn-menu-line1"></span>
@@ -71,64 +79,82 @@
 		  </section>
 		  <section class="services mb-m">
 			<div class="container">
+			  <div class="services__container">
+				<div class="services__title title">
+				  <div>our services</div>
+				  <h2>our services that <span>we provide</span></h2>
+				</div>
 				<div class="services__wrap">
-					<div class="services__item">
-					  <div class="services__item_content">
-						<div class="service_count green">1 service</div>
-						<h3>Jiu Jitsu Competition Package for Children's Parties</h3>
-						<p>
-						  Ready to add excitement and healthy competition to your
-						  child's party? CompeteX Sport Events specializes in
-						  thrilling Jiu Jitsu competitions tailored for kids' parties!
-						</p>
-						<a href="./service-page.html" class="btn">read more</a>
-					  </div>
-					  <div class="services__item_img">
-						<img
-						  src="./assets/image/services-img1.jpg"
-						  alt="Jiu Jitsu Competition Package for Children's Parties"
-						/>
-					  </div>
+				  <div class="services__item">
+					<div class="services__item_content">
+					  <div class="service_count green">1 service</div>
+					  <h3>Jiu Jitsu Competition Package for Children's Parties</h3>
+					  <p>
+						Ready to add excitement and healthy competition to your
+						child's party? CompeteX Sport Events specializes in
+						thrilling Jiu Jitsu competitions tailored for kids' parties!
+					  </p>
+					  <a href="./services.html" class="btn">read more
+						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+							<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+							</svg>
+					  </a>
 					</div>
-					<div class="services__item">
-					  <div class="services__item_content">
-						<div class="service_count green">2 service</div>
-						<h3>Jiu Jitsu Corporate Events</h3>
-						<p>
-						  CompeteX Sport Events offers corporate clients unique Jiu
-						  Jitsu events that combine competition and team-building.
-						  This boosts morale, strengthens team bonds, and creates
-						  unforgettable experiences.
-						</p>
-						<a href="./service-page.html" class="btn">read more</a>
-					  </div>
-					  <div class="services__item_img">
-						<img
-						  src="./assets/image/services-img2.jpg"
-						  alt="Jiu Jitsu Corporate Events"
-						/>
-					  </div>
-					</div>
-					<div class="services__item">
-					  <div class="services__item_content">
-						<div class="service_count green">3 service</div>
-						<h3>Jiu Jitsu Competition Package</h3>
-						<p>
-						  At CompeteX Sport Events, we bring the thrill of Jiu Jitsu
-						  to corporate clients. Our packages combine expert event
-						  management with team-building excitement, ensuring a
-						  successful and memorable experience for all.
-						</p>
-						<a href="./services.html" class="btn">read more</a>
-					  </div>
-					  <div class="services__item_img">
-						<img
-						  src="./assets/image/services-img1.jpg"
-						  alt="Jiu Jitsu Competition Package"
-						/>
-					  </div>
+					<div class="services__item_img">
+					  <img
+						src="./assets/image/services-img1.jpg"
+						alt="Jiu Jitsu Competition Package for Children's Parties"
+					  />
 					</div>
 				  </div>
+				  <div class="services__item">
+					<div class="services__item_content">
+					  <div class="service_count green">2 service</div>
+					  <h3>Jiu Jitsu Corporate Events</h3>
+					  <p>
+						CompeteX Sport Events offers corporate clients unique Jiu
+						Jitsu events that combine competition and team-building.
+						This boosts morale, strengthens team bonds, and creates
+						unforgettable experiences.
+					  </p>
+					  <a href="./services.html" class="btn">read more
+						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+							<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+							</svg>
+					  </a>
+					</div>
+					<div class="services__item_img">
+					  <img
+						src="./assets/image/services-img2.jpg"
+						alt="Jiu Jitsu Corporate Events"
+					  />
+					</div>
+				  </div>
+				  <div class="services__item">
+					<div class="services__item_content">
+					  <div class="service_count green">3 service</div>
+					  <h3>Jiu Jitsu Competition Package</h3>
+					  <p>
+						At CompeteX Sport Events, we bring the thrill of Jiu Jitsu
+						to corporate clients. Our packages combine expert event
+						management with team-building excitement, ensuring a
+						successful and memorable experience for all.
+					  </p>
+					  <a href="./services.html" class="btn">read more
+						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
+							<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
+							</svg>
+					  </a>
+					</div>
+					<div class="services__item_img">
+					  <img
+						src="./assets/image/services-img1.jpg"
+						alt="Jiu Jitsu Competition Package"
+					  />
+					</div>
+				  </div>
+				</div>
+			  </div>
 			</div>
 		  </section>
 </main>
