--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main>
-      <section class="hero_v2 hero mb-m">
+      <section class="hero mb-m">
         <div class="container">
           <div class="hero__container">
             <div class="breadcrumbs text-regular-s">
@@ -75,18 +75,18 @@
           </div>
         </div>
       </section>
-      <section class="about_v2 mb-m">
+      <section class="about mb-m">
         <div class="container">
-          <div class="about_v2__container">
-            <div class="about_v2_img">
+          <div class="about__container">
+            <div class="about__img">
               <img src="./assets/image/mission-img3.jpg" alt="judge" />
             </div>
-            <div class="about_v2_content">
-              <div class="about_v2__title title">
+            <div class="about__content">
+              <div class="about__title title">
                 <div>about us</div>
                 <h2>CompeteX: Transforming <span>Sports for All</span></h2>
               </div>
-              <div class="about_v2_text">
+              <div class="about__text">
                 <p>
 					CompeteX Sport Events: Revolutionizing Sports Experiences for All
 					At CompeteX Sport Events, our mission is to transform the sports event industry by delivering exceptional and memorable experiences for everyone—from professional athletes to corporate teams and children's parties. Founded by a group of sports enthusiasts who saw the need for better-managed sports events, we are dedicated to offering top-tier, customized events that cater to diverse audiences. Our journey began with local, small-scale events and quickly expanded due to our reputation for excellence. 
