--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <button class="switch__btn">GER</button>
                   </div>
-                  <a href="" class="btn">book events
+                  <a href="./404.html" class="btn">book events
 					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
 						<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
 						</svg>
@@ -44,7 +44,7 @@
 
               <button class="switch__btn">GER</button>
             </div>
-            <a href="" class="btn">book events
+            <a href="./404.html" class="btn">book events
 				<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
 					<path d="M10.2353 0.756907C10.2353 0.342693 9.89949 0.00690642 9.48528 0.00690657L2.73528 0.00690615C2.32107 0.00690615 1.98528 0.342692 1.98528 0.756906C1.98528 1.17112 2.32107 1.50691 2.73528 1.50691H8.73528V7.50691C8.73528 7.92112 9.07107 8.25691 9.48528 8.25691C9.8995 8.25691 10.2353 7.92112 10.2353 7.50691L10.2353 0.756907ZM1.53033 9.77252L10.0156 1.28724L8.95495 0.226576L0.46967 8.71186L1.53033 9.77252Z" fill="#2CA656"/>
 				</svg>
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main>
-      <section class="hero_v1 hero mb-m">
+      <section class="main hero mb-m">
         <div class="hero__container">
           <div class="hero__top">
             <div class="container">
@@ -139,9 +139,9 @@
           </div>
         </div>
       </section>
-      <section class="about mb-m">
+      <section class=" move mb-m">
         <div class="container">
-          <div class="about__top title">
+          <div class=" move__top title">
             <div>about us</div>
             <h2>
               <span> CompeteX Sport Events: </span>Creating memorable sports
@@ -160,43 +160,43 @@
 			</a>
           </div>
         </div>
-        <div class="about__slider">
-          <div class="swiper aboutSlider">
+        <div class=" move__slider">
+          <div class="swiper  moveSlider">
             <div class="swiper-wrapper">
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img1.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img2.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img3.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img4.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img1.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img2.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide move-slide">
                 <img src="./assets/image/slide-img3.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img4.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img1.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img2.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img3.jpg" alt="about image" />
               </div>
-              <div class="swiper-slide about-slide">
+              <div class="swiper-slide  move-slide">
                 <img src="./assets/image/slide-img4.jpg" alt="about image" />
               </div>
             </div>
@@ -220,7 +220,7 @@
                     child's party? CompeteX Sport Events specializes in
                     thrilling Jiu Jitsu competitions tailored for kids' parties!
                   </p>
-                  <a href="./services.html" class="btn">read more
+                  <a href="./service-page.html" class="btn">read more
 					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
 						<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
 						</svg>
@@ -243,7 +243,7 @@
                     This boosts morale, strengthens team bonds, and creates
                     unforgettable experiences.
                   </p>
-                  <a href="./services.html" class="btn">read more
+                  <a href="./service-page.html" class="btn">read more
 					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
 						<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
 						</svg>
@@ -266,7 +266,7 @@
                     management with team-building excitement, ensuring a
                     successful and memorable experience for all.
                   </p>
-                  <a href="./services.html" class="btn">read more
+                  <a href="./service-page.html" class="btn">read more
 					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="none">
 						<path d="M10.7353 0.757395C10.7353 0.343181 10.3995 0.0073947 9.98528 0.00739485L3.23528 0.00739443C2.82107 0.00739443 2.48528 0.343181 2.48528 0.757395C2.48528 1.17161 2.82107 1.50739 3.23528 1.50739H9.23528V7.50739C9.23528 7.92161 9.57107 8.25739 9.98528 8.25739C10.3995 8.25739 10.7353 7.92161 10.7353 7.50739L10.7353 0.757395ZM2.03033 9.77301L10.5156 1.28772L9.45495 0.227064L0.96967 8.71235L2.03033 9.77301Z" fill="#2CA656"/>
 						</svg>
