--- a/service-page.html
+++ b/service-page.html
@@ -56,14 +56,14 @@
       </div>
     </header>
     <main>
-		<section class="hero_v2 hero">
+		<section class="hero">
 			<div class="container">
 			<div class="hero__container">
 				<div class="breadcrumbs text-regular-s">
 					  <div class="breadcrumbs__wrap">
 						<a href="./index.html">Home page</a>
 						<span> > </span>
-						<span>CompeteX Jiu Jitsu Corporate Events</span>
+						<span>Services</span>
 					  </div>
 				  </div>
 			  <div class="hero__top">
@@ -86,7 +86,11 @@
 					<div class="events__content">
 						<h2>CompeteX Jiu Jitsu <span>Corporate Events</span></h2>
 						<p>CompeteX Sport Events offers a unique and exhilarating opportunity for corporate clients to engage their teams in the dynamic world of Jiu Jitsu. Our tailored packages combine the excitement of martial arts competition with team-building exercises, fostering camaraderie, resilience, and a winning mindset among participants. Whether you're looking to enhance employee morale, strengthen bonds within your organization, or simply provide a memorable experience, CompeteX Jiu Jitsu Corporate Events are designed to deliver an unforgettable and impactful experience.</p>
-						<a href="./contact.html" class="btn">book events</a>
+						<a href="./contact.html" class="btn">book events
+							<svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" fill="none">
+								<path d="M10.4926 1.25691C10.4926 0.842693 10.1568 0.506906 9.74261 0.506907L2.99261 0.506906C2.57839 0.506906 2.24261 0.842692 2.24261 1.25691C2.24261 1.67112 2.57839 2.00691 2.99261 2.00691H8.99261V8.00691C8.99261 8.42112 9.32839 8.75691 9.74261 8.75691C10.1568 8.75691 10.4926 8.42112 10.4926 8.00691L10.4926 1.25691ZM1.78765 10.2725L10.2729 1.78724L9.21228 0.726576L0.726994 9.21186L1.78765 10.2725Z" fill="#2CA656"/>
+								</svg>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -145,50 +149,49 @@
 			  </div>
 			</div>
 		  </section>
-		  <section class="slider mb-m">
-			
-			<div class="about__slider">
-			  <div class="swiper aboutSlider">
-				<div class="swiper-wrapper">
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img1.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img2.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img3.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img4.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img1.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img2.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img3.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img4.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img1.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img2.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img3.jpg" alt="about image" />
-				  </div>
-				  <div class="swiper-slide about-slide">
-					<img src="./assets/image/slide-img4.jpg" alt="about image" />
+		  <section class="move mb-m">
+			<div class=" move__slider">
+				<div class="swiper  moveSlider">
+				  <div class="swiper-wrapper">
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img1.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img2.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img3.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img4.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img1.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img2.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide move-slide">
+					  <img src="./assets/image/slide-img3.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img4.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img1.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img2.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img3.jpg" alt="about image" />
+					</div>
+					<div class="swiper-slide  move-slide">
+					  <img src="./assets/image/slide-img4.jpg" alt="about image" />
+					</div>
 				  </div>
 				</div>
 			  </div>
-			</div>
 		  </section>
 		  
 		<section class="feature mb-m">
