--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main>
-		<section class="hero_v2 hero mb-m">
+		<section class=" hero mb-m">
 			<div class="container">
 			<div class="hero__container">
 				<div class="breadcrumbs text-regular-s">
